fix gap under channel list

--- a/src/styles/channels/index.scss
+++ b/src/styles/channels/index.scss
@@ -13,6 +13,10 @@
 }
 
 // Scroller
+.sidebar_c48ade .scroller__629e4 {
+    margin-bottom: 0;
+}
+
 .sidebar_c48ade .scroller__629e4::-webkit-scrollbar {
     width: 8px !important;
     border-radius: 0 !important;
